--- a/top_page_index.css
+++ b/top_page_index.css
@@ -36,21 +36,23 @@ body {
     display: flex; /* フレックスボックスを使用 */
     justify-content: center; /* 中央に配置 */
     position: absolute; /* 絶対位置に設定 */
-    bottom: 20px; /* 画面の下からの距離 */
-    left: 50%; /* 水平方向の中央に配置 */
+    left: 60%; /* 水平方向の中央に配置 */
+    top: 40%; /* 水平方向の中央に配置 */
     transform: translateX(-50%); /* 中心に合わせるために左に移動 */
 }
 
 
 .page-wrap {
     display: flex; /* フレックスボックスを使用 */
-    justify-content: space-between; /* 水平方向に左右を配置 */
-    align-items: flex-start; /* 縦方向に上部を合わせる */
+    justify-content: center; /* 水平方向に左右を配置 */
+    position: absolute; /* 絶対位置に設定 */
     min-height: 100vh; /* 画面全体を使うが、最低限の高さを確保 */
     padding: 20px; /* 上下に余白を追加 */
+    left: 15%; /* 水平方向の中央に配置 */
+    top: 10%; /* 水平方向の中央に配置 */
 }
 .app-logo {
-    max-width: 40%; /* 画面に合わせて最大幅を設定 */
+    max-width: 45%; /* 画面に合わせて最大幅を設定 */
     height: auto; /* 高さは自動調整 */
     display: block; /* ブロック要素として表示 */
     margin-right: 20px; /* ロゴとボタンの間にスペースを追加 */
