--- a/suspicious_page/suspicious_page_index.css
+++ b/suspicious_page/suspicious_page_index.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Noto Sans JP', Arial, sans-serif;
     background-color: #f0f0f0;
     margin: 0;
     padding: 0;
@@ -24,7 +24,7 @@ body {
     font-weight: bold;
     padding: 15px 5px;
     text-decoration: none;
-    color: #00BCD4;
+    color: #f09c8a;
     background: #f0f0f0;
     border-radius: 0 15px 15px 0;
     transition: .4s;
@@ -61,14 +61,17 @@ body {
 }
 
 .header{
-    height:70px;
-    background:#00BCD4;
+    height:120px;
+    background:#f09c8a;
     color:#fff;
     width:100%;
   }
   .logo{
+    width: 200px;  /* お好みの幅に調整 */
+    height: auto;  /* 高さは自動調整 */
+    display: block; /* 画像をブロック要素にして余白を管理 */
     margin: 0 10px;
-    line-height:50px;
+    line-height:60px;
     float:left;
   }
   .nav{
@@ -78,7 +81,8 @@ body {
   .nav li{display:inline-block;}
   .nav li a{
     display:inline-block;
-     padding:3px 15px;
+     padding:20px 20px;
+     font-size:25px;
     color:inherit;
     text-decoration:none;
   }
