--- a/top_page_index.css
+++ b/top_page_index.css
@@ -9,12 +9,9 @@ body {
 }
 
 .app-container {
-    padding: 20px;
-    border-radius: 20px;
-    gap: 50px 30px 0 0;
-    align-items: center;
-    justify-content: center;
-    /* max-width: 90vw; */
+    display: flex; /* フレックスボックスを使用 */
+    align-items: center; /* 縦方向に中央に配置 */
+    flex: 1; /* 残りのスペースを占める */
 }
 
 .button {
@@ -24,7 +21,7 @@ body {
     font-weight: bold;
     padding: 15px 5px;
     text-decoration: none;
-    color: #00BCD4;
+    color: #f09c8a;
     background: #f0f0f0;
     border-radius: 15px;
     transition: .4s;
@@ -36,50 +33,44 @@ body {
 }
 
 .button-wrap {
-    margin: 0;
-    text-align: center;
+    display: flex; /* フレックスボックスを使用 */
+    justify-content: center; /* 中央に配置 */
+    position: absolute; /* 絶対位置に設定 */
+    left: 60%; /* 水平方向の中央に配置 */
+    top: 40%; /* 水平方向の中央に配置 */
+    transform: translateX(-50%); /* 中心に合わせるために左に移動 */
 }
+
 
 .page-wrap {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /*flex-wrap: wrap;
-    min-width: 150px;
-    /* max-width: 100%; */
-    width: 100%;
-    flex-direction: row;
+    display: flex; /* フレックスボックスを使用 */
+    justify-content: center; /* 水平方向に左右を配置 */
+    position: absolute; /* 絶対位置に設定 */
     min-height: 100vh; /* 画面全体を使うが、最低限の高さを確保 */
     padding: 20px; /* 上下に余白を追加 */
-    box-sizing: border-box; /* パディングを含めてサイズを計算 */
-    gap: 20px;
+    left: 15%; /* 水平方向の中央に配置 */
+    top: 10%; /* 水平方向の中央に配置 */
+}
+.app-logo {
+    max-width: 45%; /* 画面に合わせて最大幅を設定 */
+    height: auto; /* 高さは自動調整 */
+    display: block; /* ブロック要素として表示 */
+    margin-right: 20px; /* ロゴとボタンの間にスペースを追加 */
 }
 
-.introduce-app {
-    color: #606060;
-    font-size: 4rem;
-    font-weight:  bold;
-    vertical-align: middle;
-    display: inline-block;
-    writing-mode: vertical-lr; /* 縦書きにする */
-    text-orientation: upright; /* 文字を縦に表示 */
-    width: auto;
-    max-width: 1000px;
-    text-align: center;
-    margin: 0;
-    padding: 10px 50px;
-    line-height: 1.2;
-}
 
 .header{
-    height:70px;
-    background:#00BCD4;
+    height:120px;
+    background:#f09c8a;
     color:#fff;
     width:100%;
   }
   .logo{
+    width: 200px;  /* お好みの幅に調整 */
+    height: auto;  /* 高さは自動調整 */
+    display: block; /* 画像をブロック要素にして余白を管理 */
     margin: 0 10px;
-    line-height:50px;
+    line-height:60px;
     float:left;
   }
   .nav{
@@ -89,7 +80,8 @@ body {
   .nav li{display:inline-block;}
   .nav li a{
     display:inline-block;
-     padding:3px 15px;
+     padding:20px 20px;
+     font-size:25px;
     color:inherit;
     text-decoration:none;
   }
