--- a/static/css/interphone_page_index.css
+++ b/static/css/interphone_page_index.css
@@ -81,44 +81,55 @@ body {
     background:#f09c8a;
     color:#fff;
     width:100%;
-  }
-  .logo{
+}
+
+
+.header .nav li.active a {
+    color: gray;            /* 文字色を灰色に */
+    border-bottom: 2px solid gray; /* 下に線を付ける */
+}
+
+.header .nav li a {
+    text-decoration: none; /* 通常のリンクは下線なし */
+}
+
+/* マウスオーバー時のスタイル（オプション） */
+.header .nav li.header-hover-color a:hover {
+    color: gray;
+}
+.logo{
     width: 200px;  /* お好みの幅に調整 */
     height: auto;  /* 高さは自動調整 */
     display: block; /* 画像をブロック要素にして余白を管理 */
     margin: 0 10px;
     line-height:60px;
     float:left;
-  }
-  .nav{
+}
+
+.nav{
     list-style:none;
     float:left;
-  }
-  .nav li{display:inline-block;}
-  .nav li a{
+}
+
+.nav li{display:inline-block;}
+
+.nav li a{
     display:inline-block;
      padding:20px 20px;
      font-size:25px;
     color:inherit;
     text-decoration:none;
-  }
+}
   
-  .container{
+.container{
     max-width: 1200px;
     padding:10px 15px;
     width:100%;
-  }
+}
 
-  .container:after {
+.container:after {
       clear: both;
       content: "";
       display: table;
-  }
-
-.header-hover-color {
-    color: #f0f0f0;
 }
 
-.header-hover-color:hover {
-    color: #636363;
-}
