--- a/static/css/interphone_page_index.css
+++ b/static/css/interphone_page_index.css
@@ -81,9 +81,10 @@ body {
     background:#f09c8a;
     color:#fff;
     width:100%;
-  }
+}
 
-  .header .nav li.active a {
+
+.header .nav li.active a {
     color: gray;            /* 文字色を灰色に */
     border-bottom: 2px solid gray; /* 下に線を付ける */
 }
@@ -96,8 +97,7 @@ body {
 .header .nav li.header-hover-color a:hover {
     color: gray;
 }
-
-.log{
+.logo{
     width: 200px;  /* お好みの幅に調整 */
     height: auto;  /* 高さは自動調整 */
     display: block; /* 画像をブロック要素にして余白を管理 */
@@ -121,5 +121,14 @@ body {
     text-decoration:none;
 }
   
+.container{
+    max-width: 1200px;
+    padding:10px 15px;
+    width:100%;
+}
 
-
+.container:after {
+      clear: both;
+      content: "";
+      display: table;
+}
