--- a/static/css/suspicious_page_index.css
+++ b/static/css/suspicious_page_index.css
@@ -92,3 +92,15 @@ body {
       content: "";
       display: table;
   }
+
+  .container{
+    max-width: 1200px;
+    padding:10px 15px;
+    width:100%;
+  }
+
+  .container:after {
+      clear: both;
+      content: "";
+      display: table;
+  }
