--- a/static/css/calender_page_index.css
+++ b/static/css/calender_page_index.css
@@ -44,7 +44,7 @@ body {
     background:#f09c8a;
     color:#fff;
     width:100%;
-  }
+}
 
 .header .nav li.active a {
     color: gray;            /* 文字色を灰色に */
@@ -59,6 +59,7 @@ body {
 .header .nav li.header-hover-color a:hover {
     color: gray;
 }
+
   .logo{
     width: 200px;  /* お好みの幅に調整 */
     height: auto;  /* 高さは自動調整 */
@@ -78,6 +79,18 @@ body {
      font-size:25px;
     color:inherit;
     text-decoration:none;
+  }
+  
+  .container{
+    max-width: 1200px;
+    padding:10px 15px;
+    width:100%;
+  }
+
+  .container:after {
+      clear: both;
+      content: "";
+      display: table;
   }
 
 
