不審者、知人ページのタイトル変更

--- a/static/css/known_page_index.css
+++ b/static/css/known_page_index.css
@@ -94,3 +94,9 @@ body {
       display: table;
   }
 
+  .known-container{
+    position: fixed;
+    position: relative; /* 今の位置を基準 */
+    top: 20px; /* 上から移動 */
+    left: 70px; /* 左から移動 */
+  }
