--- a/static/css/suspicious_page_index.css
+++ b/static/css/suspicious_page_index.css
@@ -104,3 +104,11 @@ body {
       content: "";
       display: table;
   }
+
+  .suspicious-container{
+    position: fixed;
+    position: relative; /* 今の位置を基準 */
+    top: 20px; /* 上から移動 */
+    left: 70px; /* 左から移動 */
+  }
+  
