--- a/static/css/known_page_index.css
+++ b/static/css/known_page_index.css
@@ -1,102 +1,134 @@
 body {
-    font-family: 'Noto Sans JP', Arial, sans-serif;
-    background-color: #f0f0f0;
-    margin: 0;
-    padding: 0;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+  font-family: 'Noto Sans JP', Arial, sans-serif;
+  background-color: #f0f0f0;
+  margin: 0;
+  padding: 0;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
 .app-container {
-    padding: 20px;
-    border-radius: 20px;
-    gap: 50px 30px 0 0;
-    align-items: center;
-    justify-content: center;
-    /* max-width: 90vw; */
+  padding: 20px;
+  border-radius: 20px;
+  gap: 50px 30px 0 0;
+  align-items: center;
+  justify-content: center;
+  /* max-width: 90vw; */
 }
 
 .page-wrap {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 
-    min-width: 150px;
-    /* max-width: 100%; */
-    height: auto;
+  min-width: 150px;
+  /* max-width: 100%; */
+  height: auto;
 }
 
 .introduce-app {
-    color: #606060;
-    font-size: 120px;
-    font-weight:  bold;
-    vertical-align: middle;
-    display: inline-block;
-    width: 15vw;
-    margin: 80px 10px;
-    padding: 10px 50px;
-    line-height: 125px;
+  color: #606060;
+  font-size: 120px;
+  font-weight:  bold;
+  vertical-align: middle;
+  display: inline-block;
+  width: 15vw;
+  margin: 80px 10px;
+  padding: 10px 50px;
+  line-height: 125px;
 }
 
 .header{
-    height:120px;
-    background:#f09c8a;
-    color:#fff;
-    width:100%;
+  height:120px;
+  background:#f09c8a;
+  color:#fff;
+  width:100%;
 }
 
 .header .nav li.active a {
-  color: gray;            /* 文字色を灰色に */
-  border-bottom: 2px solid gray; /* 下に線を付ける */
+color: gray;            /* 文字色を灰色に */
+border-bottom: 2px solid gray; /* 下に線を付ける */
 }
 
 .header .nav li a {
-  text-decoration: none; /* 通常のリンクは下線なし */
+text-decoration: none; /* 通常のリンクは下線なし */
 }
 
 /* マウスオーバー時のスタイル（オプション） */
 .header .nav li.header-hover-color a:hover {
-    color: gray;
+  color: gray;
 }
 
-  .logo{
-    width: 200px;  /* お好みの幅に調整 */
-    height: auto;  /* 高さは自動調整 */
-    display: block; /* 画像をブロック要素にして余白を管理 */
-    margin: 0 10px;
-    line-height:60px;
-    float:left;
+.logo{
+  width: 200px;  /* お好みの幅に調整 */
+  height: auto;  /* 高さは自動調整 */
+  display: block; /* 画像をブロック要素にして余白を管理 */
+  margin: 0 10px;
+  line-height:60px;
+  float:left;
 }
 
 .nav{
-    list-style:none;
-    float:left;
+  list-style:none;
+  float:left;
 }
-  .nav li{display:inline-block;}
-  .nav li a{
-    display:inline-block;
-     padding:20px 20px;
-     font-size:25px;
-    color:inherit;
-    text-decoration:none;
-  }
-  
-  .container{
-    max-width: 1200px;
-    padding:10px 15px;
-    width:100%;
-  }
+.nav li{display:inline-block;}
+.nav li a{
+  display:inline-block;
+   padding:20px 20px;
+   font-size:25px;
+  color:inherit;
+  text-decoration:none;
+}
 
-  .container:after {
-      clear: both;
-      content: "";
-      display: table;
-  }
+.container{
+  max-width: 1200px;
+  padding:10px 15px;
+  width:100%;
+}
 
-  .known-container{
-    position: fixed;
-    position: relative; /* 今の位置を基準 */
-    top: 20px; /* 上から移動 */
-    left: 70px; /* 左から移動 */
-  }
+.container:after {
+    clear: both;
+    content: "";
+    display: table;
+}
+
+.known-container{
+  position: fixed;
+  position: relative; /* 今の位置を基準 */
+  top: 20px; /* 上から移動 */
+  left: 70px; /* 左から移動 */
+}
+
+.danger-container{
+  position: fixed;
+  position: relative; /* 今の位置を基準 */
+  top: 20px; /* 上から移動 */
+  left: 70px; /* 左から移動 */
+}
+
+.description-text-known {
+  font-size: 20px;           /* フォントサイズを設定 */
+  position: relative;        /* 固定位置ではなく相対位置に */
+  margin: 10px 0;              /* デフォルトのマージンをリセット */
+  padding: 10px 0;          /* 上下のパディングを設定 */
+  text-align: left;         /* 左揃え */
+}
+
+.known-title {
+  margin-top: 0;          /* タイトルとテキストの間隔を調整 */
+}
+
+.description-text {
+  font-size: 20px;          /* フォントサイズを設定 */
+  position: fixed;
+  position: relative; /* 今の位置を基準 */
+  top: 20px; /* 上から移動 */
+  left: 70px; /* 左から移動 */
+}
+
+.breadcrumb-top {
+  color: #a7a3a3; /* ここで色を指定します（例：赤色） */
+  /*　text-decoration: underline;  下線を引きます */
+}
